syntax = "proto3";
package go_di_template.v1;

option go_package = "github.com/tuantran1810/go-di-template/proto/v1";

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

message KeyValuePair {
    string key = 1 [(buf.validate.field).string = {min_len: 1, max_len: 32}];
    string value = 2 [(buf.validate.field).string = {min_len: 1, max_len: 32}];
}

message User {
    uint32 id = 1;
    google.protobuf.Timestamp created_at = 2;
    google.protobuf.Timestamp updated_at = 3;
    string username = 4 [(buf.validate.field).string = {min_len: 1, max_len: 128}];
    string password = 5 [(buf.validate.field).string = {min_len: 1, max_len: 32}];
    string uuid = 6;
    string name = 7 [(buf.validate.field).string = {min_len: 1, max_len: 128}];
    optional string email = 8 [(buf.validate.field).string.email = true];
}

message UserAttribute {
    uint32 id = 1;
    google.protobuf.Timestamp created_at = 2;
    google.protobuf.Timestamp updated_at = 3;
    uint32 user_id = 4;
    string key = 5 [(buf.validate.field).string = {min_len: 1, max_len: 32}];
    string value = 6 [(buf.validate.field).string = {min_len: 1, max_len: 32}];
}
