syntax = "proto3";
package go_di_template.v1;

option go_package = "github.com/tuantran1810/go-di-template/proto/v1";

import "buf/validate/validate.proto";
import "go_di_template/v1/entities.proto";

message CreateUserRequest {
    User user = 1;
    repeated KeyValuePair attributes = 2;
}

message CreateUserResponse {
    User user = 1;
    repeated UserAttribute attributes = 2;
}

message GetUserByUsernameRequest {
    string username = 1 [(buf.validate.field).string = {min_len: 1, max_len: 128}];
}

message GetUserByUsernameResponse {
    User user = 1;
    repeated UserAttribute attributes = 2;
}
